css/style.css
 
   
  

body {
    position: relative;
    width: 100%;
    height: 100%;
}
.bg-loader .text {
  position: fixed;
 color: #93ca3a;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  margin: auto;
  z-index: 9999;
 font-weight: bold;
}

.bg-loader {
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    z-index: 800;
    position: fixed;
    width: 100%;
    height: 100%;
    background: #fff;
}

#top-header {
   height: 30px;background-color: #000;
}

.navbar.navbar-fixed-top {
    opacity: 1 !important;
    transition: opacity 0.20s ease-in;
}

#totop {
    height: 35px;
    width: 35px;
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: red;
    z-index: 999;
    border-radius: 50%;
    text-align: center;
    background: inherit;
    box-shadow: 0 2px 5px rgba(0,0,0,0.5);
    display: none;

}
#totop:hover {
    cursor: pointer;
}

#totop .fa {
    font-size: 17px;
    line-height:30px;
    color: #777;
}

#top-header .social-icon {
    top: 0;
    padding-right: 15px;
    text-align: right;
}

#top-header .social-icon li a {
    height: 30px;
    line-height: 30px;
    color: #fff;
}

#top-header .social-icon li a:hover {
    color: #777;
    background-color: #fff;
}

.navbar-brand img {
    margin-top: -4px;
}
body
{
	background: #ffffff;
    font-family: 'Raleway', sans-serif;
	font-weight: 400;
    position: relative;
	}

h2, h3, h4
    {
        font-weight: bold;
    }

p
    {
        line-height: 26px;
    }

/* start all section */
#service, #divider, #about, #team, #newsletter,
 #pricing, #portfolio, #client, #contact
    {
        padding-top: 140px;
        padding-bottom: 140px;
        position: relative;
    }
/* end all section */

/* start nagivation */
.navbar-default
    {
        background: #fff;
        border: none;
        box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.08);
        margin: 0 !important;
        padding: 0;

    }
.navbar-default .navbar-brand
    {
        padding-top: 4px;
        padding-bottom: 60px;
    }
.navbar-default .navbar-nav li a
    {
        font-size: 13px;
        font-weight: bold;
        line-height: 35px;
    }
.navbar-default .navbar-nav li a:hover
    {
        color: #93ca3a;
    }
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #93ca3a;
  background-color: transparent;
}
.navbar-default .navbar-toggle
    {
        border: none;
        padding-top: 16px;
    }
.navbar-default .navbar-toggle .icon-bar
    {
        background: #93ca3a;
        border-color: transparent;
    }
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus { background-color: transparent }
/* end navigation */

/* start home */ 

.feature {
    position: relative;
    padding:30px 0;
}
.feature .item{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
    font-size: 16px;
}  
.feature .item .fa {
    font-size: 42px;

}   
.feature .item .counter {
    color: #93ca3a;
    font-size: 55px;
    font-weight: bold;
}  

.hide {
    display: none;
}
#home
	{
      
	}
.flexslider {
  margin: 0 0 60px;
  background: #fff;
  padding: 0;
  position: relative;
  zoom: 1;
  background-color: #371604;
  overflow: hidden;
  margin: 0;
}
.flexslider .slides {
  padding: 0;
  zoom: 1;
}
.flexslider .slides img {
  width: 100%;
  min-width: 648px;
  min-height: 270px;
  display: block;
}
.flexslider .slides > li {
  display: none;  
  padding: 0;
  position: relative;
  -webkit-backface-visibility: hidden;
}
.flexslider img {
  position: relative;
  width: 100%;
}
.slider-caption {
  color:white;
  margin: 0;
  position: absolute;
  top: 0;
  left: 0;
  text-transform: uppercase;
  z-index: 7;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}
.flexslider .btn
{
    background: #93ca3a;
    border-radius: 0;
    border: 2px solid transparent;
    color: #FFFFFF;
    font-weight: bold;
    margin: 40px 0 0 0;
    -webkit-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
    height: 50px;
    width: 250px;
    padding: 12px 10px 10px 10px;
}
.flexslider .btn:hover,
.flexslider .btn:focus {
    background: #fff;
    color: #93ca3a;
    border: 2px solid transparent;
}

/* end home */

/* start service */
#service .media
    {
        padding: 10px;
    }
#service .media .fa
    {
        color: #202020;
        font-size: 40px;
        margin-right: 20px;
    }
#service .media .media-heading
    {
        border-bottom: 2px solid #202020;
        font-weight: 600;
        font-size: 20px;
        padding-bottom: 10px;
    }
/* end service */

/* start divider */
#divider
    {
        background: url('../images/divider-bg.jpg');
        background-size: cover;
        background-repeat: no-repeat;
        color: #FFFFFF;
    }
#divider h2
    {
        font-size: 40px;
    }
#divider strong
    {
        color: #93ca3a;
    }
#divider h3
    {
        padding-bottom: 30px;
    }
/* end divider */

/* start about */
#about h3
    {
        color: #93ca3a;
        font-size: 40px;
        padding-bottom: 10px;
    }
#about h4
    {
        padding-bottom: 10px;
    }
#about .progress
    {
        border-radius: 4px;
        background: #ffffff;
        height: 6px;
    }
#about .progress .progress-bar-danger
    {
        background: #93ca3a;
    }
#about .text-top
    {
        padding-top: 50px;
    }
#about span
    {
        display: block;
        padding-bottom: 10px;
    }
#about small
    {
        font-weight: bold;
        padding-left: 200px;
    }
/* ... */

